# todoDesktop

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  GIT_COMMANDS.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  close-app.bat  index.html  package-lock.json  package.json  push-to-github.bat  push-to-github.sh  release-quick.bat  release.bat  sync-attachments.bat  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  file_manager.rs  git_manager.rs  main.rs
src/components/: ConflictResolver.css  ConflictResolver.tsx  Layout.css  Layout.tsx  MarkdownEditor.css  MarkdownEditor.tsx  Sidebar.css  Sidebar.tsx
src/hooks/: useAutoSync.ts
src/pages/: DayView.css  DayView.tsx  MonthView.css  MonthView.tsx  Settings.css  Settings.tsx  YearView.css  YearView.tsx
src/store/: configStore.ts  pastUncompletedStore.ts  statsStore.ts
